[package]
name = "dlx"
version = "0.1.0"
edition = "2018"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "dlx.rs"

[dependencies]

[features]
trace = []
stats = []
stats_trace = ["stats"]
default = ["stats"]
